--- a/public/style.css
+++ b/public/style.css
@@ -1,34 +1,43 @@
 main{
-    height: 98vh;
-    width: auto;
-    grid-template-rows: 70px 1fr;
-    grid-template-columns: 1fr;
+    position: relative;
+    margin-right: 20%;
+    margin-left: 20%;
+    margin-top: 20%;
+    height: 500px;
+    width: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    grid-template-rows: 40px 40px repeat(10, 1fr);
+    grid-template-columns: 100px 1fr;
     display: grid;
     font-family: 'Roboto', sans-serif;
 }
 
-h1{
-    background-image: linear-gradient(to right, #bf3da9 , #6a307f);
+#moment-day{
+    grid-row: 2fr;
+    grid-column: 1fr;
+    font-size: 40px;
+}
+
+#moment-date{
     grid-row: 1fr;
     grid-column: 1fr;
-    padding-left: 20px;
-    line-height: 70px;
-    font-size: 40px;
-    color: white;
+}
+
+#moment-year{
+    grid-row: 1fr;
+    grid-column: 1fr;
 }
 
 #content{
     grid-row: 1fr;
-    grid-column: 1fr;
+    grid-column: 2fr;
     padding-top: 20px;
     padding-right: 20px;
     padding-left: 20px;
 }
 
 #newInput{
-    border-radius: 7px;
-    border-color: #bf3da9;
-    border-width: 1px;
+    outline: none;
     margin-right: 5px;
     margin-left: 5px;
     width: 83%;
@@ -36,7 +45,8 @@ h1{
     padding-left: 10px;
     font-weight: bold;
 }
-.fa-times{
+
+.fa-circle{
     position: absolute;
     right: 10px;
 }
