--- a/public/style.css
+++ b/public/style.css
@@ -1,39 +1,48 @@
 main{
     position: relative;
+    padding-left: 20px;
+    padding: 20px 20px 20px 20px;
     margin-right: 20%;
     margin-left: 20%;
     margin-top: 20%;
     height: 500px;
     width: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    grid-template-rows: 40px 40px repeat(10, 1fr);
-    grid-template-columns: 100px 1fr;
+    grid-template-rows: 20px 20px 30px 1fr;
+    grid-template-columns: 90px 1fr;
     display: grid;
     font-family: 'Roboto', sans-serif;
 }
 
+#submit-form{
+    grid-row: span 1;
+    grid-column: span 2;
+}
+
 #moment-day{
-    grid-row: 2fr;
-    grid-column: 1fr;
+    grid-row: 1/span 2;
+    grid-column: span 1;
+    vertical-align: middle;
     font-size: 40px;
+    font-weight: bold;
 }
 
 #moment-date{
-    grid-row: 1fr;
-    grid-column: 1fr;
+    grid-row: span 1;
+    grid-column: span 1;
 }
 
 #moment-year{
-    grid-row: 1fr;
-    grid-column: 1fr;
+    grid-row: span 1;
+    grid-column: span 1;
 }
 
 #content{
-    grid-row: 1fr;
-    grid-column: 2fr;
+    grid-row: span 1;
+    grid-column: span 2;
     padding-top: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
+    width: 100%;
+    padding-right: 10px;
 }
 
 #newInput{
@@ -56,7 +65,9 @@ a:hover{
 }
 
 .toDoItem{
-    background-color: #eaecef;
+    grid-column: span 2;
+    grid-row: span 1;
+    /* background-color: #eaecef; */
     border-radius: 3px;
     margin-top: 15px;
     padding: 3px;
