--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ main{
     margin-right: 20%;
     margin-left: 20%;
     margin-top: 20%;
-    height: 500px;
+    height: auto;
     width: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     grid-template-rows: 20px 20px 30px 1fr;
